--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3002
-MONGODB = mongodb://127.0.0.1:27017/nodeapp
+MONGODB = mongodb+srv://arief:arief@cluster0.vdigf.mongodb.net/nodeapp?retryWrites=true&w=majority
 SECRET_KEY = qwertyuiop
