--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.8",
     "express": "^4.17.3",
+    "express-ejs-layouts": "^2.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
     "multer": "^1.4.4"
